fix for spacing in collab feature

--- a/css/ccap-statistics.less
+++ b/css/ccap-statistics.less
@@ -99,8 +99,8 @@
       .x-feature(#330033, @gray, collab, 0.42in);
       .x-finger();
 
-    // top spacing for collaborative exercises
-    .body p:nth-of-type(1) { margin-top: 1em; }
+      // top spacing for collaborative exercises
+      .body p:nth-of-type(1) { margin-top: 1em; }
     }
     &.lab {
       page-break-inside: avoid;
@@ -463,15 +463,6 @@ div.part > div.titlepage {display:none;}
 
 .multiple-choice, .interactive-exercise, .formula-review {
   > .section > .title { display: none; }
-}
-
-// indentation for Homework Solution options
-.simplelist {
-  margin-left: 1em;
-}
-
-.simplelist td {
-  padding: .5em 0 .25em;
 }
 
 /******************************************************
